[package]
name = "header"
version = "0.1.0"
authors = ["Jacob LeGrone <npm@jacob.work>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.5"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
